# notsu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: devcard.yml  render.yml
assets/fonts/: jbm-bold.b64  jbm-regular.b64
assets/logos/: cattype.b64  cavemode.b64  devpon.b64  dup.b64
fixtures/: sample.json
src/: github.rs  main.rs  model.rs  theme.rs
src/svg/: companies.rs  contact.rs  hero.rs  icons.rs  logos.rs  mod.rs  now.rs  projects.rs  pulse.rs  util.rs
