[package]
name = "notsu-profile"
version = "4.0.0"
edition = "2021"
description = "Self-rendering animated SVG generator for github.com/notsu — the profile is compiled, not assembled."
license = "MIT"

[[bin]]
name = "notsu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
